--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     <form>
                         <!--input for user name-->
                         <div class="form-group">
-                          <label for="assignTo">Name:</label>
-                          <input type="text" class="form-control" id="assignTo" name="username">
+                          <label for="assignTo">Assign to:</label>
+                          <input type="text" class="form-control" id="assignTo" name="assignTo">
                         </div>
                         
                         <!--input for selecting area-->                    
                         <div class="form-group">
                              <label for="name">Select area (select one):</label>
-                              <select class="form-control" id="name" name="selection">
+                              <select class="form-control" id="name" name="name">
                                 <option>kitchen</option>
                                 <option>bathroom</option>
                                 <option>laundry</option>
@@ -66,8 +66,8 @@
 
                         <!--Input for due date of activity-->
                         <div class="form-group"> <!-- Date input -->
-                            <label class="control-label" for="dueDate">Date</label>
-                            <input class="form-control" id="dueDate" name="date" placeholder="MM/DD/YYY" type="text"/>
+                            <label class="control-label" for="dueDate">Date:</label>
+                            <input class="form-control" id="dueDate" name="dueDate" placeholder="MM/DD/YYY" type="text"/>
                         </div>
 
                         <!--input for statusA. Select type is used for the different Status options (TODO, IN PROGRESS, REVIEW, DONE). -->
@@ -85,7 +85,7 @@
                     </form>
                 </div>
 
-                <!--Column that holds user output-->
+                <!--Column that holds user output ie cards-->
                 
 
 
