--- a/index.html
+++ b/index.html
@@ -90,6 +90,69 @@
 
 
 
+            <div class="col-8 border border-primary rounded ">
+                <div class="card-columns">
+                    <h1 class="display-4">My Tasks</h1>
+                    <div id="list-items">
+                        <div class="card" ">                
+                            <div class="card-body">
+                                <h5 class="card-title">Task 1</h5>
+                                <p class="card-text">task 1 description</p>
+                                <p class="card-text">Santiago Carrillo</p>
+                                <p class="card-text">Due Date: Aug 20 - 2020</p>
+                                <span class="badge badge-primary">IN PROGRESS</span>
+                                <a href="#" class="btn btn-primary">Delete</a>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="card">                
+                            <div class="card-body">
+                                <h5 class="card-title">Task 2</h5>
+                                <p class="card-text">task 2 description</p>
+                                <p class="card-text">Santiago Carrillo</p>
+                                <p class="card-text">Due Date: Sep 20 - 2020</p>
+                                <span class="badge badge-success">DONE</span>
+                                <a href="#" class="btn btn-primary">Delete</a>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="card">                
+                            <div class="card-body">
+                                <h5 class="card-title">Task 3</h5>
+                                <p class="card-text">task 3 description</p>
+                                <p class="card-text">Santiago Carrillo</p>
+                                <p class="card-text">Due Date: Feb 20 - 2021</p>
+                                <span class="badge badge-warning">PENDING</span>
+                                <a href="#" class="btn btn-primary">Delete</a>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="card">                
+                            <div class="card-body">
+                                <h5 class="card-title">Task 4</h5>
+                                <p class="card-text">task 4 description</p>
+                                <p class="card-text">Santiago Carrillo</p>
+                                <p class="card-text">Due Date: Aug 20 - 2020</p>
+                                <span class="badge badge-success">DONE</span>
+                                <a href="#" class="btn btn-primary">Delete</a>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="card">                
+                            <div class="card-body">
+                                <h5 class="card-title">Task 5</h5>
+                                <p class="card-text">task 5 description</p>
+                                <p class="card-text">Santiago Carrillo</p>
+                                <p class="card-text">Due Date: Oct 15 - 2020</p>
+                                <span class="badge badge-primary">IN PROGRESS</span>
+                                <a href="#" class="btn btn-primary">Delete</a>
+                            </div>
+                        </div>
+                        <br />
+                    </div>
+                </div>
+            </div>
+
 
 
 
