--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                     <div id="list-items">
                         <div class="card" ">                
                             <div class="card-body">
-                                <h5 class="card-title">Task 1</h5>
-                                <p class="card-text">task 1 description</p>
-                                <p class="card-text">Santiago Carrillo</p>
+                                <h5 class="card-title">Name of Area</h5>
+                                <p class="card-text">description</p>
+                                <p class="card-text">Person</p>
                                 <p class="card-text">Due Date: Aug 20 - 2020</p>
                                 <span class="badge badge-primary">IN PROGRESS</span>
                                 <a href="#" class="btn btn-primary">Delete</a>
@@ -107,8 +107,8 @@
                         <br />
                         <div class="card">                
                             <div class="card-body">
-                                <h5 class="card-title">Task 2</h5>
-                                <p class="card-text">task 2 description</p>
+                                <h5 class="card-title">Kitchen</h5>
+                                <p class="card-text">Wash dishes</p>
                                 <p class="card-text">Santiago Carrillo</p>
                                 <p class="card-text">Due Date: Sep 20 - 2020</p>
                                 <span class="badge badge-success">DONE</span>
@@ -118,8 +118,8 @@
                         <br />
                         <div class="card">                
                             <div class="card-body">
-                                <h5 class="card-title">Task 3</h5>
-                                <p class="card-text">task 3 description</p>
+                                <h5 class="card-title">Bedroom</h5>
+                                <p class="card-text">Vacuum</p>
                                 <p class="card-text">Santiago Carrillo</p>
                                 <p class="card-text">Due Date: Feb 20 - 2021</p>
                                 <span class="badge badge-warning">PENDING</span>
@@ -129,8 +129,8 @@
                         <br />
                         <div class="card">                
                             <div class="card-body">
-                                <h5 class="card-title">Task 4</h5>
-                                <p class="card-text">task 4 description</p>
+                                <h5 class="card-title">Loungeroom</h5>
+                                <p class="card-text">Dust</p>
                                 <p class="card-text">Santiago Carrillo</p>
                                 <p class="card-text">Due Date: Aug 20 - 2020</p>
                                 <span class="badge badge-success">DONE</span>
@@ -140,8 +140,8 @@
                         <br />
                         <div class="card">                
                             <div class="card-body">
-                                <h5 class="card-title">Task 5</h5>
-                                <p class="card-text">task 5 description</p>
+                                <h5 class="card-title">Bathroom</h5>
+                                <p class="card-text">Clean toilet</p>
                                 <p class="card-text">Santiago Carrillo</p>
                                 <p class="card-text">Due Date: Oct 15 - 2020</p>
                                 <span class="badge badge-primary">IN PROGRESS</span>
