--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
             <div class="col-sm-5 border border-primary rounded"> 
                 <!--column that holds user input-->
 
-                <form>
+                <form id="newForm">
                     <!--input for user name-->
                     <div class="form-group">
-                      <label for="assignTo">Assign to:</label>
-                      <input type="text" class="form-control" id="assignTo" name="assignTo">
+                          <label for="newNameInput">Name:</label>
+                          <input type="text" class="form-control" id="newNameInput">
                     </div>
                     
                     <!--input for selecting area-->                    
                     <div class="form-group">
-                         <label for="name">Select area (select one):</label>
-                          <select class="form-control" id="name" name="name">
+                         <label for="newSelectArea">Select Area:</label>
+                          <select class="form-control" id="newSelectArea">
                             <option>kitchen</option>
                             <option>bathroom</option>
                             <option>laundry</option>
@@ -69,36 +69,38 @@
                             <option>Outside</option>    
                           </select> 
                     </div>
-
+  
                     <!-- input for description of task-->
                     <div class="form-group">
-                        <label for="description">Description of task:</label>
-                        <textarea class="form-control" rows="5" id="description" name="description"></textarea>
+                        <label for="newDescription">Description of task:</label>
+                        <textarea class="form-control" rows="5" id="newDescription"></textarea>
                     </div>
-
-
+  
+  
                     <!--Input for due date of activity-->
                     <div class="form-group"> <!-- Date input -->
-                        <label class="control-label" for="dueDate">Date:</label>
-                        <input class="form-control" id="dueDate" name="dueDate" placeholder="MM/DD/YYY" type="text"/>
+                        <label for="newDueDate">Date:</label>
+                        <input type="date" class="form-control" id="newDueDate" placeholder="MM/DD/YYY">
                     </div>
-
+  
                     <!--input for statusA. Select type is used for the different Status options (TODO, IN PROGRESS, REVIEW, DONE). -->
                     <div class="form-group">
-                        <label for="status">Status:</label>
-                        <select class="form-control" id="status">
-                          <option>To do</option>
-                          <option>In progress</option>
-                          <option>Review</option>
-                          <option>Done</option>
+                          <label for="newStatus">Status:</label>
+                          <select class="form-control" id="newStatus">
+                              <option>To do</option>
+                              <option>In progress</option>
+                              <option>Review</option>
+                              <option>Done</option>
                         </select>
                       </div>
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                      <div id="alertMessage" style="display: none" class="alert alert-danger" role="alert">
+                          Error message    
+                          </div>
+                          <button type="submit" class="btn btn-primary btn-block">Add Task</button>
                 </form>
             </div>
         </div>
-</div>
+  </div>
 <!-- List section -->
 
 <section class="section">
