--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Hello, world!</title>
+    <title>Latest 14/12/2020</title>
   </head>
   <body>
 
@@ -27,20 +27,25 @@
    </div></nav>
 
    <!-- header section -->
-   <header class="header">
-    <div class="overla">
-    <div class="container">
-        <div class="description">
+   <header id="header" class="header">
+      <div class="container">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="text-container">
+                        <!-- <div class="description"> -->
             <h1>    Hello ,Welcome To FlatBuddies!
              <p>    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>   
           <button class="btn btn-outline-secondary btn-lg">See more</button>   </h1>  
-         </div>
-        </div>
-    </div>
+             <!-- </div> end of description -->
+          </div> <!-- end of text-container -->
+        </div>  <!-- end of col -->
+      </div> <!-- end of row -->
+    </div> <!-- end of container -->
     </header>
 
     <!-- Task form -->
+<section class="section">
         <div class="container">
           <h4 class="text-red">Form</h4>
           <div class="row justify-content-between">
@@ -105,6 +110,8 @@
             </div>
         </div>
 </div>
+</section>
+
 <!-- List section -->
 
 <section class="section">
@@ -204,13 +211,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+    <script type="module" src='js/taskManager.js'></script>
 
-    <script type="text/javascript" src='js/main.js'></script>
+    <script type="module" src='js/main.js'></script>
     
   </body>
 </html>
