--- a/index-flex.html
+++ b/index-flex.html
@@ -154,12 +154,15 @@
         </section>
     </div>
 
-
-
+    
         <!--summary table of all tasks-->
-        <!-- <section class="task-summary wrapper">
-                        <p> Not sure if we are going to keep this section</p>
-        </section> -->
+        <section class="task-summary wrapper">
+          <h2>Tasks</h2>
+          <ul class="list-group" id="tasksList">
+            <li></li>
+            li></li>
+          </ul>        
+        </section>
 
         <!--footer-->
         <footer class="footer-main">
