--- a/index-flex.html
+++ b/index-flex.html
@@ -87,7 +87,7 @@
         <section class="cards-output">
             <div class="card-columns">
                 <div class="card">
-                  <div class="card-body">
+                  <div class="card-body" id= "tasksList">
                     <h5 class="card-title">Kitchen</h5>
                     <p class="card-text">Mop the floor</p>
                     <p class="card-text">Santiago Carrillo</p>
@@ -156,13 +156,13 @@
 
     
         <!--summary table of all tasks-->
-        <section class="task-summary wrapper">
+        <!-- <section class="task-summary wrapper">
           <h2>Tasks</h2>
           <ul class="list-group" id="tasksList">
             <li></li>
-            li></li>
+            <li></li>
           </ul>        
-        </section>
+        </section> -->
 
         <!--footer-->
         <footer class="footer-main">
