--- a/index.html
+++ b/index.html
@@ -142,5 +142,8 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
+
+    <script type="text/JavaScript" src='js/taskManager.js'></script>
+    <script type="text/JavaScript" src='js/main.js'></script>
 </body>
 </html>
